--- a/public/assets/css/page/modal-alertify-calendar.css
+++ b/public/assets/css/page/modal-alertify-calendar.css
@@ -59,7 +59,7 @@
 	height: 32rem;
 	border-radius: 20px;
 	max-height: 90%;
-	border: 1px solid var(--color-2);
+	border: 1px solid var(--dark-5);
 }
 
 .cs-modal-header {
