--- a/public/assets/css/page/dashboard.css
+++ b/public/assets/css/page/dashboard.css
@@ -311,6 +311,7 @@
 	content: "، ";
 }
 
+.appointment-card.full::after,
 .appointment-card.active::after {
 	content: "\f00c";
 	position: absolute;
@@ -328,6 +329,12 @@
 	color: var(--color-2);
 	box-shadow: var(--shadow-outset-small);
 	pointer-events: none;
+}
+
+.appointment-card.full::after {
+	content: "همه نوبت ها پر شده";
+	font-family: inherit;
+	font-size: 2.5rem;
 }
 
 .inside-container-center,
