--- a/public/assets/css/page/modal-alertify-calendar.css
+++ b/public/assets/css/page/modal-alertify-calendar.css
@@ -318,7 +318,7 @@
 }
 
 .mds-bs-persian-datetime-picker-popover {
-    font-family: iransans, sans-serif !important;
+    font-family: iranyekan, Tahoma, sans-serif !important;
     border: 0;
     border-radius: 18px;
     background-color: var(--color-5-50);
