--- a/public/assets/css/page/dashboard.css
+++ b/public/assets/css/page/dashboard.css
@@ -249,6 +249,14 @@
 	width: calc(25% - 0.4rem);
 }
 
+.link-absolute {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
+
 .appointment-card > img {
 	flex: 0 0 35%;
 	max-width: 35%;
