--- a/public/assets/css/global/responsive.css
+++ b/public/assets/css/global/responsive.css
@@ -49,6 +49,27 @@
         display: block;
     }
 
+    .nav-back {
+        display: block;
+        position: fixed;
+        z-index: 9999;
+        background-color: var(--dark-2);
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: all 200ms linear;
+        -webkit-transition: all 200ms linear;
+        -moz-transition: all 200ms linear;
+        -ms-transition: all 200ms linear;
+        -o-transition: all 200ms linear;
+}
+
+    .nav-back.show {
+        opacity: 0.4;
+    }
+
     .nav-mobile {
         display: flex;
         flex-direction: column;
@@ -60,16 +81,16 @@
         z-index: 10000;
         box-shadow: var(--shadow-outset-big);
         padding: 4rem 2rem;
-        transition: all 300ms linear;
-        -webkit-transition: all 300ms linear;
-        -moz-transition: all 300ms linear;
-        -ms-transition: all 300ms linear;
-        -o-transition: all 300ms linear;
+        transition: all 200ms linear;
+        -webkit-transition: all 200ms linear;
+        -moz-transition: all 200ms linear;
+        -ms-transition: all 200ms linear;
+        -o-transition: all 200ms linear;
         right: -20rem;
         opacity: 0;
-    }
+}
 
-    .nav-mobile.open {
+    .nav-mobile.show {
         right: 0;
         opacity: 1;
     }
@@ -120,9 +141,115 @@
 }
 
 @media ( max-width: 767.9px ) {
-    
+    .header {
+        height: 30rem;
+    }
+
+    .header-description {
+        /* max-height: 12rem; */
+        overflow: hidden;
+        justify-content: flex-start;
+        padding: 1rem 1.5rem;
+        width: 50%;
+    }
+
+    .header-description > .description {
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        -webkit-box-orient: vertical;
+    }
+
+    .about-index-image {
+        max-height: 40rem;
+    }
+
+    .blog-box-card {
+        height: 15rem;
+    }
+
+    .blog-box-card > .blog-box-description .title {
+        margin-top: 0;
+    }
+
+    .blog-box-card > .blog-box-description .description {
+        display: -webkit-box;
+        -webkit-line-clamp: 5;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        line-height: 1.9;
+    }
+
+    .footer-large-button > section {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    .footer-list {
+        margin-top: 0;
+    }
+
+    .footer-large-button {
+        margin: 0 auto;
+    }
+
+    .footer .top > :nth-child( 1 ) {
+        order: 1;
+    }
+
+    .footer .top > :nth-child( 2 ) {
+        order: 2;
+    }
+
+    .footer .top > :nth-child( 3 ) {
+        order: 4;
+    }
+
+    .footer .top > :nth-child( 4 ) {
+        order: 3;
+    }
+
+    .e-nemad {
+        margin-top: 0.5rem;
+    }
 }
 
 @media ( max-width: 575.9px ) {
-    
+    html {
+        font-size: 12px;
+    }
+
+    .header {
+        height: 20rem;
+    }
+
+    .header-description {
+        padding: 0.25rem 0.5rem;
+        width: 60%;
+        bottom: 1rem;
+    }
+
+    .header-description > .description {
+        -webkit-line-clamp: 3;
+    }
+
+    .blog-box-card > .blog-box-description .description {
+        -webkit-line-clamp: 4;
+    }
+
+    .footer-large-button > section {
+        padding-top: 2.5rem;
+        padding-bottom: 2.5rem;
+    }
+
+    .footer-list {
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    .ul-list {
+        margin-top: 1rem;
+    }
 }
